# rye-lint-mwe

./: README.md  pyproject.toml
subproject/: README.md  pyproject.toml
subproject/src/subproject/: __init__.py
