[project]
name = "rye-lint-mwe"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Chris Pryer", email = "cnpryer@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []

[tool.rye.workspace]
members = [
    "subproject"
]